[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Graphics/Items/Coin/Pull Request.png" type="Texture" id=1]
[ext_resource path="res://Assets/Graphics/Items/Coin/Pull Request2aseprite.png" type="Texture" id=2]
[ext_resource path="res://Coin.gd" type="Script" id=5]
[ext_resource path="res://Assets/Audio/Coin.wav" type="AudioStream" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 16.32

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 2 ) ],
"loop": true,
"name": "Spin",
"speed": 3.0
} ]

[sub_resource type="Animation" id=3]
resource_name = "Bounce"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -64 ), Vector2( 0, 0 ) ]
}

[node name="Coin" type="Area2D"]
collision_layer = 8
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 2 )
animation = "Spin"
frame = 1
playing = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Bounce = SubResource( 3 )

[node name="SoundCoin" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -15.0
[connection signal="body_entered" from="." to="." method="_on_Coin_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
